--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DiagTerm</title>
+    <link rel="icon" type="image/svg+xml" href="../icons/diagTerm.svg">
+    <link rel="icon" type="image/png" sizes="256x256" href="../icons/diagTerm-256-bgt.png">
     <link rel="stylesheet" href="styles.css">
 </head>
 
@@ -17,7 +19,7 @@
                 <button id="flashMenu" class="btn">Flash</button>
                 <button id="aboutMenu" class="btn">About</button>
             </div>
-            <div class="top-bar-title">DiagTerm V0.1.0</div>
+            <div class="top-bar-title" id="app-version-title">DiagTerm</div>
             <div class="window-controls">
                 <button id="window-minimize" class="window-control-btn" title="Minimize">−</button>
                 <button id="window-maximize" class="window-control-btn" title="Maximize">□</button>
@@ -92,7 +94,7 @@
             </div>
             <div class="modal-body" style="padding: 24px; text-align: center;">
                 <h1 style="color: #4ec9b0; margin-bottom: 8px; font-size: 28px;">DiagTerm</h1>
-                <p style="color: #858585; margin-bottom: 24px; font-size: 14px;">Version 0.1.0</p>
+                <p style="color: #858585; margin-bottom: 24px; font-size: 14px;" id="app-version-about">Version</p>
                 <div style="text-align: left; margin-bottom: 24px;">
                     <p style="color: #d4d4d4; margin-bottom: 12px; line-height: 1.6;">
                         DiagTerm is a graphical UART terminal application for debugging and monitoring serial
@@ -116,8 +118,41 @@
                 </div>
             </div>
             <div
-                style="padding: 16px; border-top: 1px solid #3e3e42; display: flex; gap: 8px; justify-content: flex-end;">
+                style="padding: 16px; border-top: 1px solid #3e3e42; display: flex; gap: 8px; justify-content: space-between; align-items: center;">
+                <button class="btn" onclick="checkForUpdates()">Check for Updates</button>
                 <button class="btn btn-primary" onclick="closeAboutModal()">Close</button>
+            </div>
+        </div>
+    </div>
+
+    <div id="updateModal" class="modal" style="display: none;">
+        <div class="modal-content" style="max-width: 600px; width: 90%;">
+            <div class="modal-header">
+                <h2 id="update-modal-title">Update Available</h2>
+                <span class="modal-close" onclick="closeUpdateModal()">&times;</span>
+            </div>
+            <div class="modal-body" style="padding: 24px;">
+                <div id="update-content">
+                    <p id="update-message" style="color: #d4d4d4; margin-bottom: 16px;"></p>
+                    <div id="update-progress-container" style="display: none; margin-bottom: 16px;">
+                        <div style="display: flex; justify-content: space-between; margin-bottom: 8px;">
+                            <span style="color: #cccccc; font-size: 13px;">Downloading...</span>
+                            <span id="update-progress-percent" style="color: #cccccc; font-size: 13px;">0%</span>
+                        </div>
+                        <div style="width: 100%; height: 8px; background: #3c3c3c; border-radius: 4px; overflow: hidden;">
+                            <div id="update-progress-bar" style="height: 100%; background: #007acc; width: 0%; transition: width 0.3s;"></div>
+                        </div>
+                    </div>
+                    <div id="update-release-notes" style="display: none; margin-top: 16px; padding: 12px; background: #252526; border-radius: 3px; max-height: 200px; overflow-y: auto;">
+                        <h3 style="color: #4ec9b0; font-size: 14px; margin-bottom: 8px;">Release Notes:</h3>
+                        <div id="update-release-notes-content" style="color: #d4d4d4; font-size: 12px; white-space: pre-wrap;"></div>
+                    </div>
+                </div>
+            </div>
+            <div style="padding: 16px; border-top: 1px solid #3e3e42; display: flex; gap: 8px; justify-content: flex-end;">
+                <button id="update-download-btn" class="btn btn-primary" onclick="downloadUpdate()" style="display: none;">Download Update</button>
+                <button id="update-install-btn" class="btn btn-primary" onclick="installUpdate()" style="display: none;">Install and Restart</button>
+                <button class="btn" onclick="closeUpdateModal()">Close</button>
             </div>
         </div>
     </div>
