--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -31,7 +31,7 @@
 
         <div class="main-content" id="mainContent">
             <div class="empty-state">
-                <p>No tabs open. Click '+ New Tab' to create one.</p>
+                <p>No tabs open. Click '+ New Tab' to create one</p>
             </div>
         </div>
 
@@ -139,19 +139,26 @@
                             <span style="color: #cccccc; font-size: 13px;">Downloading...</span>
                             <span id="update-progress-percent" style="color: #cccccc; font-size: 13px;">0%</span>
                         </div>
-                        <div style="width: 100%; height: 8px; background: #3c3c3c; border-radius: 4px; overflow: hidden;">
-                            <div id="update-progress-bar" style="height: 100%; background: #007acc; width: 0%; transition: width 0.3s;"></div>
+                        <div
+                            style="width: 100%; height: 8px; background: #3c3c3c; border-radius: 4px; overflow: hidden;">
+                            <div id="update-progress-bar"
+                                style="height: 100%; background: #007acc; width: 0%; transition: width 0.3s;"></div>
                         </div>
                     </div>
-                    <div id="update-release-notes" style="display: none; margin-top: 16px; padding: 12px; background: #252526; border-radius: 3px; max-height: 200px; overflow-y: auto;">
+                    <div id="update-release-notes"
+                        style="display: none; margin-top: 16px; padding: 12px; background: #252526; border-radius: 3px; max-height: 200px; overflow-y: auto;">
                         <h3 style="color: #4ec9b0; font-size: 14px; margin-bottom: 8px;">Release Notes:</h3>
-                        <div id="update-release-notes-content" style="color: #d4d4d4; font-size: 12px; white-space: pre-wrap;"></div>
+                        <div id="update-release-notes-content"
+                            style="color: #d4d4d4; font-size: 12px; white-space: pre-wrap;"></div>
                     </div>
                 </div>
             </div>
-            <div style="padding: 16px; border-top: 1px solid #3e3e42; display: flex; gap: 8px; justify-content: flex-end;">
-                <button id="update-download-btn" class="btn btn-primary" onclick="downloadUpdate()" style="display: none;">Download Update</button>
-                <button id="update-install-btn" class="btn btn-primary" onclick="installUpdate()" style="display: none;">Install and Restart</button>
+            <div
+                style="padding: 16px; border-top: 1px solid #3e3e42; display: flex; gap: 8px; justify-content: flex-end;">
+                <button id="update-download-btn" class="btn btn-primary" onclick="downloadUpdate()"
+                    style="display: none;">Download Update</button>
+                <button id="update-install-btn" class="btn btn-primary" onclick="installUpdate()"
+                    style="display: none;">Install and Restart</button>
                 <button class="btn" onclick="closeUpdateModal()">Close</button>
             </div>
         </div>
